# miniplayer

./: LICENSE  README.md  config.example  pyproject.toml  setup.cfg  setup.py
miniplayer/: __init__.py  config.py  mpd_interface.py  window_manager.py
miniplayer/widgets/: playlist.py
