[metadata]
name = miniplayer-kenzie
version = 1.1.2
description = An mpd client with album art and basic functionality.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GuardKenzie/miniplayer
author = Tristan Ferrua
author_email = tristanferrua@gmail.com
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
scripts = 
    bin/miniplayer

install_requires =
    python-mpd2
    ffmpeg-python
    pixcat
    pillow
    ueberzug

