[metadata]
name = miniplayer
version = 1.7.3
description = An mpd client with album art and basic functionality.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GuardKenzie/miniplayer
author = Erica Ferrua
author_email = tolvukisa@gmail.com
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
scripts = 
    bin/miniplayer

packages=
    miniplayer

install_requires =
    python-mpd2
    ffmpeg-python
    pixcat
    pillow
    requests
    ueberzug
    colorthief

